// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addNotification mutation should add new notification by date/origin/dest to existing user 1`] = `
Object {
  "data": Object {
    "addNotification": Object {
      "email": "test@mail.com",
      "notifications": Array [
        Object {
          "date": "2019-08-09",
          "priceAirplaneLast": null,
          "priceHotelLast": 75,
          "travelId": "5c6c7e42e3b7e1edb974a40c",
        },
        Object {
          "date": "2019-07-07",
          "priceAirplaneLast": 53,
          "priceHotelLast": null,
          "travelId": "5bbce95f81e97acfcd8e0a76",
        },
      ],
    },
  },
}
`;

exports[`addNotification mutation should add new notification by id to existing user 1`] = `
Object {
  "data": Object {
    "addNotification": Object {
      "email": "test@mail.com",
      "notifications": Array [
        Object {
          "date": "2019-08-09",
          "priceAirplaneLast": null,
          "priceHotelLast": 75,
          "travelId": "5c6c7e42e3b7e1edb974a40c",
        },
        Object {
          "date": "2019-07-07",
          "priceAirplaneLast": null,
          "priceHotelLast": 25,
          "travelId": "5d239408f05e9620082a2419",
        },
      ],
    },
  },
}
`;

exports[`addNotification mutation should not add notification by date/origin/dest if it already exists 1`] = `
Object {
  "data": Object {
    "addNotification": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "Such notification already exists. TravelId: 5c6c7e42e3b7e1edb974a40c, date: 2019-08-09",
      "path": Array [
        "addNotification",
      ],
    },
  ],
}
`;

exports[`addNotification mutation should not add notification by id if it already exists 1`] = `
Object {
  "data": Object {
    "addNotification": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "Such notification already exists. TravelId: 5c6c7e42e3b7e1edb974a40c, date: 2019-08-09",
      "path": Array [
        "addNotification",
      ],
    },
  ],
}
`;

exports[`addNotification mutation should not add notification if user doesn't exist 1`] = `
Object {
  "data": Object {
    "addNotification": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "User with email random_user@mail.com doesn't exist",
      "path": Array [
        "addNotification",
      ],
    },
  ],
}
`;

exports[`deleteNotification mutation should delete notification 1`] = `
Object {
  "data": Object {
    "deleteNotification": Object {
      "email": "test@mail.com",
      "notifications": Array [],
    },
  },
}
`;

exports[`deleteNotification mutation should return error if notification doesn't exist 1`] = `
Object {
  "data": Object {
    "deleteNotification": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "User test@mail.com doesn't have notification with id 5c6c7e42e3b7e1edb974a40d",
      "path": Array [
        "deleteNotification",
      ],
    },
  ],
}
`;

exports[`deleteNotification mutation should return error if user doesn't exist 1`] = `
Object {
  "data": Object {
    "deleteNotification": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "User with email random_user@mail.com doesn't exist",
      "path": Array [
        "deleteNotification",
      ],
    },
  ],
}
`;

exports[`signinUser mutation should return error if password doesn't match 1`] = `
Object {
  "data": Object {
    "signinUser": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "Wrong password",
      "path": Array [
        "signinUser",
      ],
    },
  ],
}
`;

exports[`signinUser mutation should return error if user doesn't exist 1`] = `
Object {
  "data": Object {
    "signinUser": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "User with email randomUser@mail.com doesn't exist",
      "path": Array [
        "signinUser",
      ],
    },
  ],
}
`;

exports[`signinUser mutation should signin user and return token 1`] = `
Object {
  "data": Object {
    "signinUser": Object {
      "token": "test_token",
    },
  },
}
`;

exports[`signupUser mutation should not sign up existing user and return error 1`] = `
Object {
  "data": Object {
    "signupUser": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 1,
        },
      ],
      "message": "User with email test@mail.com already exists",
      "path": Array [
        "signupUser",
      ],
    },
  ],
}
`;

exports[`signupUser mutation should sign up new user and return token 1`] = `
Object {
  "data": Object {
    "signupUser": Object {
      "token": "test_token",
    },
  },
}
`;
